# oscillometric_blood_pressure

./: .gitmodules  CMakeLists.txt  LICENSE  README  README.md  dataplot.cpp  dataplot.h  doxygenConfig  main.cpp  obp.cpp  obp.h  psth-vep.cpp  psth-vep.h  psth-vep.pro  psthplot.cpp  psthplot.h
c++/: CMakeLists.txt  ComediHandler.cpp  ComediHandler.h  Datarecord.cpp  Datarecord.h  IObserver.h  ISubject.cpp  ISubject.h  InfoDialog.cpp  InfoDialog.h  InfoDialogue.h  OBPDetection.cpp  OBPDetection.h  Plot.cpp  Plot.h  Processing.cpp  Processing.h  SettingsDialog.cpp  SettingsDialog.h  Window.cpp  Window.h  common.h  dataplot.cpp  dataplot.h  datarecord.cpp  datarecord.h  main.cpp  main_page.markdown  obp.cpp  obp.h  obp.pro  stackedWidgets.cpp  stackedWidgets.h  uitest.cpp  uitest.h
c++/tests/: CMakeLists.txt  test_OBPDetection.cpp
data/data0804/: algo.txt
doc/: references.bib
doc/doxygen/: doxy  doxygenConfig
doc/latex/: abstract.tex  acknowledgements.tex  algorithm.tex  bibliography.tex  conclusion.tex  declaration.tex  derivation.tex  detex.txt  hardware.tex  introduction.tex  main.tex  methodology.tex  references.bib  references.bib.bak  results.tex  settings.ini  software.tex  theory.tex
docs/: 3rd_party_2plog_2_c_make_lists_8txt.html  3rd_party_2plog_2samples_2_android_2_c_make_lists_8txt.html  3rd_party_2plog_2samples_2_c_make_lists_8txt.html  3rd_party_2plog_2samples_2_chained_2_c_make_lists_8txt.html  3rd_party_2plog_2samples_2_chained_2_chained_app_2_main_8cpp.html  3rd_party_2plog_2samples_2_chained_2_chained_app_2_main_8cpp.js  3rd_party_2plog_2samples_2_chained_2_chained_app_2_main_8cpp__incl.dot  3rd_party_2plog_2samples_2_chained_2_chained_lib_2_main_8cpp.html  3rd_party_2plog_2samples_2_chained_2_chained_lib_2_main_8cpp.js  3rd_party_2plog_2samples_2_chained_2_chained_lib_2_main_8cpp__incl.dot  3rd_party_2plog_2samples_2_color_console_2_c_make_lists_8txt.html  3rd_party_2plog_2samples_2_color_console_2_main_8cpp.html  3rd_party_2plog_2samples_2_color_console_2_main_8cpp.js  3rd_party_2plog_2samples_2_color_console_2_main_8cpp__incl.dot  3rd_party_2plog_2samples_2_custom_appender_2_c_make_lists_8txt.html  3rd_party_2plog_2samples_2_custom_appender_2_main_8cpp.html  3rd_party_2plog_2samples_2_custom_appender_2_main_8cpp.js  3rd_party_2plog_2samples_2_custom_appender_2_main_8cpp__incl.dot  3rd_party_2plog_2samples_2_custom_converter_2_c_make_lists_8txt.html  3rd_party_2plog_2samples_2_custom_converter_2_main_8cpp.html  3rd_party_2plog_2samples_2_custom_converter_2_main_8cpp.js  3rd_party_2plog_2samples_2_custom_converter_2_main_8cpp__incl.dot  3rd_party_2plog_2samples_2_custom_formatter_2_c_make_lists_8txt.html  3rd_party_2plog_2samples_2_custom_formatter_2_main_8cpp.html  3rd_party_2plog_2samples_2_custom_formatter_2_main_8cpp.js  3rd_party_2plog_2samples_2_custom_formatter_2_main_8cpp__incl.dot  3rd_party_2plog_2samples_2_custom_type_2_c_make_lists_8txt.html  3rd_party_2plog_2samples_2_custom_type_2_main_8cpp.html  3rd_party_2plog_2samples_2_custom_type_2_main_8cpp.js  3rd_party_2plog_2samples_2_custom_type_2_main_8cpp__incl.dot  3rd_party_2plog_2samples_2_debug_output_2_c_make_lists_8txt.html  3rd_party_2plog_2samples_2_debug_output_2_main_8cpp.html  3rd_party_2plog_2samples_2_debug_output_2_main_8cpp.js  3rd_party_2plog_2samples_2_debug_output_2_main_8cpp__incl.dot  3rd_party_2plog_2samples_2_demo_2_c_make_lists_8txt.html  3rd_party_2plog_2samples_2_demo_2_main_8cpp.html  3rd_party_2plog_2samples_2_demo_2_main_8cpp.js  3rd_party_2plog_2samples_2_demo_2_main_8cpp__incl.dot  3rd_party_2plog_2samples_2_event_log_2_c_make_lists_8txt.html  3rd_party_2plog_2samples_2_event_log_2_main_8cpp.html  (+741 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  (+96 more)
python/: obp_derrivative.py  obp_fixed_ratio.py  obp_fixed_ratio_recorded_data.py  obp_tests.py  sensor_calibration.py
(+1 files in other folders)
